--- a/about.html
+++ b/about.html
@@ -204,34 +204,34 @@
             <h2 class="footer-menu-name"> Problem Statements</h2>
             <ul id="menu-company" class="footer-menu-list">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html">Problem Statement-1</a>
+                <a href="#">Problem Statement-1</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c2">Problem Statement-2</a>
+                <a href="#">Problem Statement-2</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c3">Problem Statement-3</a>
+                <a href="#">Problem Statement-3</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c4">Problem Statement-4</a>
+                <a href="#">Problem Statement-4</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c5">Problem Statement-5</a>
+                <a href="#">Problem Statement-5</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c6">Problem Statement-6</a>
+                <a href="#">Problem Statement-6</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c7">Problem Statement-7</a>
+                <a href="#">Problem Statement-7</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c8">Problem Statement-8</a>
+                <a href="#">Problem Statement-8</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c8">Problem Statement-9</a>
+                <a href="#">Problem Statement-9</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#c8">Problem Statement-10</a>
+                <a href="#">Problem Statement-10</a>
                 </li>
                 </li>
             </ul>
