--- a/about.html
+++ b/about.html
@@ -48,141 +48,141 @@
         <div id="community">
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/profile2.png" alt="">
                 </div>
                 <div class="details">
                     <div class="name">VIVITSU</div>
-                    <div class="role">Hackathon</div>
+                    <div class="role">Creatives</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
