--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="tagline"></div>
             <!-- designed by me... enjoy! -->
             <div class="button-wrapper">
-                <a class="cta" href="#">
+                <a class="cta" href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5" target="_blank">
                 <span>REGISTER</span>
                 <span>
                     <svg width="30px" height="30px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
