VIVITSU --version same

--- a/about.html
+++ b/about.html
@@ -5,12 +5,17 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="cursor.css">
+    <link rel="stylesheet" href="loader.css">
     <script defer src="cursor.js"></script>
+    <script src="loader.js"></script>
     <link rel="stylesheet" href="footer.css">
     
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
     <header id="header">
         <a href="#" class="logo">VIVITSU</a>
         <div class="cursor"></div>
