--- a/index.html
+++ b/index.html
@@ -96,39 +96,39 @@
             <h1>EVENT HIGHLIGHTS</h1>
             <ul>
                 <li>
-                    <img src="images/1.png" alt="">
+                    <img src="images/highlight1.png" alt="">
                     <h3>24 Hour Hackathon</h3>
                 </li>
                 <li>
-                    <img src="images/3.png" alt="">
+                    <img src="images/highlight3.png" alt="">
                     <h3>Open Source Softwares</h3>
                 </li>
                 <li>
-                    <img src="images/2.png" alt="">
+                    <img src="images/highlight2.png" alt="">
                     <h3>Food and WiFi</h3>
                 </li>
                 <li>
-                    <img src="images/4.png" alt="">
+                    <img src="images/highlight4.png" alt="">
                     <h3>Hangout with friends</h3>
                 </li>
                 <li>
-                    <img src="images/5.png" alt="">
+                    <img src="images/highlight5.png" alt="">
                     <h3>Increase Your Network</h3>
                 </li>
                 <li>
-                    <img src="images/6.png" alt="">
+                    <img src="images/highlight6.png" alt="">
                     <h3>Music and Dance Performance</h3>
                 </li>
                 <li>
-                    <img src="images/7.png" alt="">
+                    <img src="images/highlight7.png" alt="">
                     <h3>Fun Activites</h3>
                 </li>
                 <!-- <li>
-                    <img src="images/dolphin1.png" alt="">
+                    <img src="images/highlightdolphin1.png" alt="">
                     <h3>Highlight-7</h3>
                 </li>
                 <li>
-                    <img src="images/dolphin1.png" alt="">
+                    <img src="images/highlightdolphin1.png" alt="">
                     <h3>Highlight-8</h3>
                 </li> -->
             </ul>
