--- a/about.html
+++ b/about.html
@@ -53,141 +53,341 @@
         <div id="community">
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/1.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">HANSIKA</div>
+                    <div class="role">President</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/2.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">KETAN K</div>
+                    <div class="role">Vice President</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/3.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">ABHISHEK</div>
+                    <div class="role">General Secretary</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/4.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">HARIKA</div>
+                    <div class="role">Working President</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/5.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">NAZMA</div>
+                    <div class="role">Treasurer</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/6.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">HARIKA V</div>
+                    <div class="role">Marketing Lead</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/7.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">NILASHA</div>
+                    <div class="role">Database Manager</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/8.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">SRUJANA</div>
+                    <div class="role">Creative Head</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/9.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">KALYAN</div>
+                    <div class="role">Tech Lead</div>
+                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/13.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">VENKAT AMAR</div>
+                    <div class="role">Creative Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/30.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">GANESH</div>
+                    <div class="role">Logistics</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/27.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">SHIVA</div>
+                    <div class="role">Social Media Head</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/11.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">VYSHNAVI</div>
+                    <div class="role">Marketing Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/24.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">VISHNU</div>
+                    <div class="role">Vice Treasurer</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/25.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">BHAIRESH</div>
+                    <div class="role">Tech Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/33.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">MUSKAAN</div>
+                    <div class="role">Content Writer</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/10.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">ROHIT</div>
+                    <div class="role">Databse Manager</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/12.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">VINEETHA</div>
+                    <div class="role">Marketing Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/14.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">VARUN</div>
+                    <div class="role">Marketing Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/15.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">MATRUKA</div>
+                    <div class="role">Documentation</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/16.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">PRANEET</div>
+                    <div class="role">Logistics</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/18.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">AKANKSHA</div>
+                    <div class="role">Creative Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/profile2.png" alt="">
+                    <img src="images/19.png" alt="">
                 </div>
                 <div class="details">
-                    <div class="name">VIVITSU</div>
-                    <div class="role">Creatives</div>
+                    <div class="name">TANUSH</div>
+                    <div class="role">Event Management</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/20.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">VYSHNAVI P</div>
+                    <div class="role">Event Management</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/21.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">SATHVIK V</div>
+                    <div class="role">Marketing Team</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/17.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">SHIVA R</div>
+                    <div class="role">Photography</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/22.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">UMESH</div>
+                    <div class="role">Marketing Team</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/23.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">ARUN KUMAR</div>
+                    <div class="role">Tech Team</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/26.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">SAI MAHESH</div>
+                    <div class="role">Creative Team</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/28.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">AISHWARYA</div>
+                    <div class="role">Marketing Team</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/29.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">SATWIK K</div>
+                    <div class="role">Event Management</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/31.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">ARYAN</div>
+                    <div class="role">Event Management</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/32.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">ANNAPURNA</div>
+                    <div class="role">Event Management</div>
+                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/34.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">VIJAY VARDHAN</div>
+                    <div class="role">Marketing Team</div>
                     <div class="year">2nd Year<span class="branch">, CSE</span></div>
                 </div>
             </div>
