--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                         <h2>
                             Healthy Diet Application
                             <br>
-                            <small>Web Development</small>
-                            <small>App Development</small>
+                            <small>Web / App Development</small>
+                            <!-- <small>App Development</small> -->
                         </h2>
                     </div>
                     <div class="card-flap flap1">
@@ -172,8 +172,8 @@
                         <h2>
                             Travel Assistance Chatbot
                             <br>
-                            <small>Web Development</small>
-                            <small>App Development</small>
+                            <small>Machine Learning</small>
+                            <small>AI - ML</small>
                         </h2>
                     </div>
                     <div class="card-flap flap1">
@@ -195,8 +195,7 @@
                     <h2>
                         Platform that connects language learners with native speakers
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>Web / App Development</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
@@ -218,8 +217,7 @@
                     <h2>
                         Gamification of learning.
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>App / Web Development</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
@@ -241,8 +239,8 @@
                     <h2>
                         E-commerce products aggregator application
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>Web / App Development</small>
+                        <small>AI-ML</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
@@ -264,8 +262,7 @@
                     <h2>
                         Fake product detection system
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>AI - ML</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
@@ -287,8 +284,7 @@
                     <h2>
                         A Network Scanning Tool
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>Cyber Security</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
@@ -310,13 +306,14 @@
                     <h2>
                         Student Innovation
                         <br>
-                        <small>Web Development</small>
-                        <small>App Development</small>
+                        <small>Web/App Development</small>
+                        <small>AI - ML</small>
+                        <small>Cyber Security</small>
                     </h2>
                 </div>
                 <div class="card-flap flap1">
                     <div class="card-description">
-                    This grid is an attempt to make something nice that works on touch devices. Ignoring hover states when they're not available etc.
+                        Students can choose any one of the the following domain and can come up with there own idea each domian has one winner.
                     </div>
                 </div>
                 </div>        
