--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="dynamicText.css">
     <link rel="stylesheet" href="particle.css">
     <link rel="stylesheet" href="button.css">
-    <link rel="stylesheet" href="loader.css">
+    <!-- <link rel="stylesheet" href="loader.css"> -->
     <script defer src="bubble.js"></script>
     <script defer src="faqs.js"></script>
     <script defer src="cursor.js"></script>
     <script defer src="dynamicText.js"></script>
     <script defer src="particle.js"></script>
-    <script defer src="loader.js"></script>
+    <!-- <script defer src="loader.js"></script> -->
     <!-- <link rel="stylesheet" href="card.css"> -->
     <link rel="stylesheet" href="footer.css">
     <!-- <link rel="stylesheet" href="cardsLess.less"> -->
