--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 <div class="details">
                     <div class="name">HANSIKA</div>
                     <div class="role">President</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -68,7 +68,7 @@
                 <div class="details">
                     <div class="name">KETAN K</div>
                     <div class="role">Vice President</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -78,7 +78,7 @@
                 <div class="details">
                     <div class="name">ABHISHEK</div>
                     <div class="role">General Secretary</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -88,7 +88,7 @@
                 <div class="details">
                     <div class="name">HARIKA</div>
                     <div class="role">Working President</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -98,7 +98,7 @@
                 <div class="details">
                     <div class="name">NAZMA</div>
                     <div class="role">Treasurer</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -108,7 +108,7 @@
                 <div class="details">
                     <div class="name">HARIKA V</div>
                     <div class="role">Marketing Lead</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -118,7 +118,7 @@
                 <div class="details">
                     <div class="name">NILASHA</div>
                     <div class="role">Database Manager</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -128,7 +128,7 @@
                 <div class="details">
                     <div class="name">SRUJANA</div>
                     <div class="role">Creative Head</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -138,7 +138,7 @@
                 <div class="details">
                     <div class="name">KALYAN</div>
                     <div class="role">Tech Lead</div>
-                    <div class="year">3rd Year<span class="branch">, CSE</span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -148,7 +148,7 @@
                 <div class="details">
                     <div class="name">VENKAT AMAR</div>
                     <div class="role">Creative Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -158,7 +158,7 @@
                 <div class="details">
                     <div class="name">GANESH</div>
                     <div class="role">Logistics</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -168,7 +168,7 @@
                 <div class="details">
                     <div class="name">SHIVA</div>
                     <div class="role">Social Media Head</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -178,7 +178,7 @@
                 <div class="details">
                     <div class="name">VYSHNAVI</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -188,7 +188,7 @@
                 <div class="details">
                     <div class="name">VISHNU</div>
                     <div class="role">Vice Treasurer</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -198,7 +198,7 @@
                 <div class="details">
                     <div class="name">BHAIRESH</div>
                     <div class="role">Tech Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -208,7 +208,7 @@
                 <div class="details">
                     <div class="name">MUSKAAN</div>
                     <div class="role">Content Writer</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -218,7 +218,7 @@
                 <div class="details">
                     <div class="name">ROHIT</div>
                     <div class="role">Databse Manager</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -228,7 +228,7 @@
                 <div class="details">
                     <div class="name">VINEETHA</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -238,7 +238,7 @@
                 <div class="details">
                     <div class="name">VARUN</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -248,7 +248,7 @@
                 <div class="details">
                     <div class="name">MATRUKA</div>
                     <div class="role">Documentation</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -258,7 +258,7 @@
                 <div class="details">
                     <div class="name">PRANEET</div>
                     <div class="role">Logistics</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -268,7 +268,7 @@
                 <div class="details">
                     <div class="name">AKANKSHA</div>
                     <div class="role">Creative Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -278,7 +278,7 @@
                 <div class="details">
                     <div class="name">TANUSH</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -288,7 +288,7 @@
                 <div class="details">
                     <div class="name">VYSHNAVI P</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -298,7 +298,7 @@
                 <div class="details">
                     <div class="name">SATHVIK V</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -308,7 +308,7 @@
                 <div class="details">
                     <div class="name">SHIVA R</div>
                     <div class="role">Photography</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -318,7 +318,7 @@
                 <div class="details">
                     <div class="name">UMESH</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -328,7 +328,7 @@
                 <div class="details">
                     <div class="name">ARUN KUMAR</div>
                     <div class="role">Tech Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -338,7 +338,7 @@
                 <div class="details">
                     <div class="name">SAI MAHESH</div>
                     <div class="role">Creative Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -348,7 +348,7 @@
                 <div class="details">
                     <div class="name">AISHWARYA</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -358,7 +358,7 @@
                 <div class="details">
                     <div class="name">SATWIK K</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -368,7 +368,7 @@
                 <div class="details">
                     <div class="name">ARYAN</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -378,7 +378,7 @@
                 <div class="details">
                     <div class="name">ANNAPURNA</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -388,7 +388,7 @@
                 <div class="details">
                     <div class="name">VIJAY VARDHAN</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch">, CSE</span></div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
         </div>
