--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </span> 
                 </a>
             </div>
-            <!-- <img src="images/images/rocket.png" alt="" class=".rocket"> -->
+            <!-- <img src="images/images/" alt="" class=".rocket"> -->
             <!-- <img src="images/sun1.png" alt="" class="sun"> -->
             <!-- <img src="images/forest1.png" alt="" class="forest"> -->
             <!-- <img src="images/dolphin1.png" alt="" class="dolphin"> -->
@@ -347,13 +347,10 @@
         <div id="sponsors">
             <h1>OUR SPONSORS</h1>
             <ul>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
-                <li><img src="images/rocket.png" alt=""></li>
+                <li><img src="images/monster-energy-drink-logo.jpg" alt=""></li>
+                <li><img src="images/FTCCI.jpg" alt=""></li>
+                <li><img src="images/axis.jpg" alt=""></li>
+                <li><img src="images/" alt=""></li>
             </ul>
         </div>
         <!-- <hr>  -->
